# billiards

./: .gitignore  AGENTS.md  BEVY_SIMULATOR_PLAN.md  Cargo.toml  DSL_SHOT_MINI_SPEC.md  LICENSE  PERF.md  PHYSICS_AUDIT_2026-04-14.md  PHYSICS_ENGINE_PLAN.md  README.md  TODO.org  clippy.toml  flake.nix  justfile  open_physics_questions.org  table.billiards
.cargo/: config.toml
.trueflow/: reviews.jsonl
agent_knowledge/: README.md  agent_reading_guide.md  whitepapers_formula_candidates.txt  whitepapers_index.jsonl
benches/: physics.rs  throughput.rs
examples/scenarios/: README.md  bank_reference_track_one_rail.billiards  corey_deuel_power_draw.billiards  double_rail_kick_side_pocket.billiards  five_degree_side_pocket.billiards  force_follow_scratch.billiards  frozen_proposition_kiss.billiards  golden_break_cut_break.billiards  hustler_frozen_rail_bank.billiards  lag_shot_00_touch.billiards  lag_shot_01_slow.billiards  lag_shot_02_medium_soft.billiards  lag_shot_03_medium.billiards  lag_shot_04_medium_fast.billiards  lag_shot_05_fast.billiards  lag_shot_06_power.billiards  lag_shot_07_typical_power_break.billiards  lag_shot_08_exceptional_power_break.billiards  long_cut_top_right_rail.billiards  magic_spot_three_rail_kick.billiards  mini_break_cluster.billiards  named_physics_pinball.billiards  nine_ball_break_head_rail.billiards  nine_ball_break_left_side_rail.billiards  right_spin_stun_side_pocket.billiards  routine_nine_ball_corner_cut.billiards  spot_shot_bottom_right.billiards  stop_shot_side_pocket.billiards  straight_draw_side_pocket.billiards  straight_follow_side_pocket.billiards  straight_in_side_pocket.billiards  three_ball_pinball.billiards  (+1 more)
gymnasium/: README.md  SHOTMAKING_RL_QUICKSTART.md  pyproject.toml
gymnasium/billiards_gymnasium/: __init__.py  core.py  envs.py  layouts.py  spaces.py
gymnasium/examples/: train_pocket_cem.py
gymnasium/native/: Cargo.toml
gymnasium/native/src/: lib.rs
gymnasium/tests/: test_env.py  test_native.py
physics_audits/: 2026-04-24-ball-ball-collisions.md  2026-04-24-coordinator-summary.md  2026-04-24-cue-cloth-motion.md  2026-04-24-event-geometry-multiball.md  2026-04-24-rail-pocket.md
scripts/: build_agent_knowledge.py
src/: assets.rs  diagram.rs  drawing.rs  dsl.rs  lib.rs  main.rs  test_scenarios.rs  visualization.rs
tests/: advance_ball_state.rs  advance_two_ball_events.rs  aiming_geometry.rs  angles_and_units.rs  api_invariants.rs  assets_and_drawing.rs  ball_collision_timing.rs  ball_collisions.rs  ball_state.rs  bank_paths.rs  break_shots.rs  conditions.rs  dsl.rs  lag_calibration.rs  motion_phase_classifier.rs  motion_transitions.rs  n_ball_advance.rs  n_ball_events.rs  n_ball_pockets.rs  n_ball_simulation.rs  next_events.rs  non_ideal_ball_collisions.rs  physics.rs  position_geometry.rs  rack_and_displacement.rs  rail_collisions.rs  rail_event_execution.rs  rail_event_scheduling.rs  rendering_geometry.rs  scenario_examples.rs  shot_strikes.rs  shot_types.rs  simulation_units.rs  table_and_pocket_geometry.rs  trace_bounds.rs  two_ball_simulation.rs  units_api.rs  units_model.rs  whitepaper_validation_suite.rs
whitepapers/: 30_degree_rule_for_caroms.html  avoiding_scratches.html  cloth_motion_calibration.md  inelastic_collision_and_the_hertz_theory_of_impact.html  kicking_safe.html  peace_baby.html  publications_presentations_and_software_index.html  rail_rebound.md  swerve.md  technical_proof_index.html  the_art_of_billiards_play.html  the_physics_of_billiards.html  tinkering_makes_comeback_amid_crisis.html
xtask/: Cargo.toml
xtask/src/: main.rs
(+13 files in other folders)
