[package]
name = "billiards"
version = "0.1.0"
edition = "2021"

[dependencies]
bigdecimal = "0.4.8"
clap = { version = "4.5", features = ["derive"] }
image = "0.25.6"
imageproc = "0.25"
lazy_static = "1.5.0"
winnow = "0.7"

[dev-dependencies]
criterion = "0.5"
trybuild = "1.0"

[[bench]]
name = "physics"
harness = false

[[bench]]
name = "throughput"
harness = false
