[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "billiards-gymnasium"
version = "0.1.0"
description = "Gymnasium environments backed by the Rust billiards physics engine"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "billiards contributors" }]
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.23",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.maturin]
manifest-path = "native/Cargo.toml"
module-name = "billiards_gymnasium._native"
python-source = "."
features = ["extension-module"]
