[build-system]
requires = ["maturin>=1.10,<2"]
build-backend = "maturin"

[project]
name = "billiards-gymnasium"
version = "0.1.0"
description = "Gymnasium environments backed by the Rust billiards physics engine"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "billiards contributors" }]
dependencies = [
  "gymnasium>=1.2,<2",
  "numpy>=2,<3",
]

[dependency-groups]
dev = [
  "maturin>=1.10,<2",
  "pytest>=8,<9",
]

[tool.maturin]
manifest-path = "native/Cargo.toml"
module-name = "billiards_gymnasium._native"
python-source = "."
features = ["extension-module"]
