[package]
name = "billiards-gymnasium-native"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "_native"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
billiards = { path = "../.." }
pyo3 = { version = "0.23", features = ["abi3-py39"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
